--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtal3Hz5Jg_-QThWUTvzwj8y2zPmqpeuO26w&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real Time Crypto Price Tracker</title>
   </head>
